# RAGU

./: .gitignore  Index_Search.py  JsonRAGU.py  README.md  common.py  environment.py  pipeline.py  pyproject.toml  requirements.in  requirements.txt  setup.py  test.py
benchmark/: README.md  common.py  metrics.py  prepare.py  rags.py  requirements-benchmark.in  requirements-benchmark.txt  run.py
cgk_graph/: graph.gml  summary.json
chegeka/: dataset_utils.py
configs/: baseline.yaml  default_config.yaml  pipeline.yaml
configs/chunker/: semantic_chunker.yaml  simple_chunker.yaml
configs/generator/: original.yaml
configs/graph/: original.yaml
configs/llm/: llama3.1-8b.yaml  menon.yaml
configs/reranker/: cross_encoder_reranker.yaml  dummy_reranker.yaml
configs/triplet/: original.yaml
data/: test_text.txt
examples/: JsonRAGU.py
examples/data/: graph.gml
ragu/: LLMjudge.py  __init__.py  common.py
ragu/chunker/: __init__.py  base_chunker.py  chunkers.py
ragu/common/: __init__.py  batch_generator.py  decorator.py  embedder.py  global_parameters.py  index.py  llm.py  logger.py  parameters.py  register.py  settings.py  types.py
ragu/generate/: __init__.py  base_generator.py  generators.py
ragu/graph/: __init__.py  build.py  graph_builder.py  graph_items.py  graph_rag.py  knowledge_graph.py  types.py
ragu/reranker/: __init__.py  base_reranker.py  rerank_by_cross_encoder.py
ragu/search_engine/: __init__.py  base_engine.py  bfs_search.py  global_search.py  local_search.py  search_functional.py  types.py
ragu/storage/: base_storage.py  nano_db.py  (+1 more)
(+128 files in other folders)
