[tool.poetry]
name = "ragu"
version = "0.1.0"
description = ""
authors = ["AsphodelRem <asphodel.bog.rem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "<2.0.0"
requests = "^2.32.4"
pandas = "^2.3.0"
nltk = "^3.9.1"
torch = "^2.7.1"
transformers = "^4.52.4"
tqdm = "^4.67.1"
networkx = "^3.5"
smart-chunker = {git = "https://github.com/AsphodelRem/smart_chunker.git", rev = "main"}
sentence-transformers = "^4.1.0"
openai = "^1.86.0"
pydantic-settings = "^2.9.1"
graspologic = "^3.4.1"
future = "^1.0.0"
pyvis = "^0.3.2"
nano-vectordb = "^0.0.4.3"
tiktoken = "^0.9.0"
fastparquet = "^2024.11.0"

[tool.poetry.extras]
vllm = ["vllm"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
isort = "*"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
